tests/src/Loader/classloader/generics/Instantiation/Positive/MultipleInterface05.fact.cs
using CoreclrTestLib;
using Xunit;

namespace Loader_classloader
{
    public class _generics_Instantiation_Positive_MultipleInterface05_MultipleInterface05_
    {
        [OuterLoop]
        [Fact]
        public void _generics_Instantiation_Positive_MultipleInterface05_MultipleInterface05_cmd()
        {
            CoreclrTestWrapperLib.RunTest("Loader\\classloader\\generics\\Instantiation\\Positive\\MultipleInterface05\\MultipleInterface05.cmd");
        }
    }
}
