tests/src/Loader/classloader/generics/Instantiation/Negative/param03.fact.cs
using CoreclrTestLib;
using Xunit;

namespace Loader_classloader
{
    public class _generics_Instantiation_Negative_param03_param03_
    {
        [OuterLoop]
        [Fact]
        public void _generics_Instantiation_Negative_param03_param03_cmd()
        {
            CoreclrTestWrapperLib.RunTest("Loader\\classloader\\generics\\Instantiation\\Negative\\param03\\param03.cmd");
        }
    }
}
